# MasterCraft

./: CMakeLists.txt  README.md
include/glimac/: BBox.hpp  Cone.hpp  FilePath.hpp  FreeflyCamera.hpp  Geometry.hpp  Image.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  Sphere.hpp  common.hpp
include/mastercraft/: Chunk.hpp  Cube.hpp  MapChunk.hpp  Texture.hpp  Texture_block.h  Tree.hpp  npc_cube.h
shaders/: directionallight.fs.glsl  shad3Dblock.vs.glsl  shad3Dnpc.fs.glsl  shad3Dnpc.vs.glsl  shad3Dsun.fs.glsl  shad3Dsun.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
shaders300/: directionallight.fs.glsl  shad3Dblock.vs.glsl  shad3Dnpc.fs.glsl  shad3Dnpc.vs.glsl  shad3Dsun.fs.glsl  shad3Dsun.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
src/glimac/: Cone.cpp  Geometry.cpp  Image.cpp  Program.cpp  SDLWindowManager.cpp  Shader.cpp  Sphere.cpp  tiny_obj_loader.h
src/mastercraft/: Chunk.cpp  Cube.cpp  MapChunk.cpp  Texture.cpp  Tree.cpp  main.cpp  npc_cube.cpp
