cmake_minimum_required(VERSION 2.8)

PROJECT(Mastercraft)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)

set(OpenGL_GL_PREFERENCE GLVND)
set(OPENGL_LIBRARIES /usr/lib/x86_64-linux-gnu/libGL.so.1)

find_package(SDL REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)

set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include/)
set(LIBS_INCLUDE_DIR third-party/include)
include_directories(${SDL_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIR} ${LIBS_INCLUDE_DIR} ${INCLUDE_DIR})

set(ALL_LIBRARIES ${SDL_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})

file(GLOB_RECURSE SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_SOURCE_DIR}/include/*.hpp)
file(GLOB_RECURSE SHADER_FILES ${CMAKE_SOURCE_DIR}/shaders/*.glsl)

set(TARGET_NAME Mastercraft)
ADD_EXECUTABLE(${TARGET_NAME} 
				${SOURCE_FILES} 
				${HEADER_FILES} 
				${SHADER_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${ALL_LIBRARIES})
